--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,22 @@
 <h2>Create Account</h2>
 
-<%= form_tag '/users', method: :post do %>
+<%= form_for @user do |f| %>
   <div>
-    <%= label_tag :name %>
-    <%= text_field_tag :name %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
   </div>
   <div>
-    <%= label_tag :email %>
-    <%= text_field_tag :email %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
   </div>
   <div>
-    <%= label_tag :password %>
-    <%= password_field_tag :password %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
   </div>
   <div>
-    <%= label_tag :password_confirmation %>
-    <%= password_field_tag :password_confirmation %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
   </div>
 
-  <%= submit_tag 'Sign Up', class: 'btn btn-primary' %>
+  <%= f.submit 'Sign Up', class: 'btn btn-primary' %>
 <% end %>
